python/rregadmin/hive/value_key_cell_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^value_key_cell_.* -o value_key_cell_wrapper.py value_key_cell_wrapper.xml'
from ctypes import *

from rregadmin.hive.types_wrapper import ValueKeyCell
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
from rregadmin.util.value_wrapper import Value
STRING = c_char_p
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Cell
from rregadmin.util.ustring_list_wrapper import ustring
from rregadmin.hive.types_wrapper import guint32
from rregadmin.util.value_wrapper import guint8
from rregadmin.util.glib_wrapper import guint16
from rregadmin.util.glib_wrapper import gpointer
from rregadmin.util.value_wrapper import ValueType
from rregadmin.hive.types_wrapper import ValueCell


# ../../../rregadmin/hive/value_key_cell.h 54
value_key_cell_alloc = _libraries['librregadmin.so.1'].value_key_cell_alloc
value_key_cell_alloc.restype = POINTER(ValueKeyCell)
# value_key_cell_alloc(hdesc, rel, name, in_val)
value_key_cell_alloc.argtypes = [POINTER(Hive), offset, STRING, POINTER(Value)]
value_key_cell_alloc.__doc__ = \
"""ValueKeyCell * value_key_cell_alloc(Hive * hdesc, offset rel, unknown * name, unknown * in_val)
../../../rregadmin/hive/value_key_cell.h:54"""
# ../../../rregadmin/hive/value_key_cell.h 60
value_key_cell_unalloc = _libraries['librregadmin.so.1'].value_key_cell_unalloc
value_key_cell_unalloc.restype = gboolean
# value_key_cell_unalloc(vkc)
value_key_cell_unalloc.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_unalloc.__doc__ = \
"""gboolean value_key_cell_unalloc(ValueKeyCell * vkc)
../../../rregadmin/hive/value_key_cell.h:60"""
# ../../../rregadmin/hive/value_key_cell.h 66
value_key_cell_from_cell = _libraries['librregadmin.so.1'].value_key_cell_from_cell
value_key_cell_from_cell.restype = POINTER(ValueKeyCell)
# value_key_cell_from_cell(p)
value_key_cell_from_cell.argtypes = [POINTER(Cell)]
value_key_cell_from_cell.__doc__ = \
"""ValueKeyCell * value_key_cell_from_cell(Cell * p)
../../../rregadmin/hive/value_key_cell.h:66"""
# ../../../rregadmin/hive/value_key_cell.h 72
value_key_cell_to_cell = _libraries['librregadmin.so.1'].value_key_cell_to_cell
value_key_cell_to_cell.restype = POINTER(Cell)
# value_key_cell_to_cell(vkc)
value_key_cell_to_cell.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_to_cell.__doc__ = \
"""Cell * value_key_cell_to_cell(ValueKeyCell * vkc)
../../../rregadmin/hive/value_key_cell.h:72"""
# ../../../rregadmin/hive/value_key_cell.h 78
value_key_cell_is_valid = _libraries['librregadmin.so.1'].value_key_cell_is_valid
value_key_cell_is_valid.restype = gboolean
# value_key_cell_is_valid(p)
value_key_cell_is_valid.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_is_valid.__doc__ = \
"""gboolean value_key_cell_is_valid(unknown * p)
../../../rregadmin/hive/value_key_cell.h:78"""
# ../../../rregadmin/hive/value_key_cell.h 84
value_key_cell_get_name = _libraries['librregadmin.so.1'].value_key_cell_get_name
value_key_cell_get_name.restype = POINTER(ustring)
# value_key_cell_get_name(vk)
value_key_cell_get_name.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_name.__doc__ = \
"""ustring * value_key_cell_get_name(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:84"""
# ../../../rregadmin/hive/value_key_cell.h 90
value_key_cell_get_data_size = _libraries['librregadmin.so.1'].value_key_cell_get_data_size
value_key_cell_get_data_size.restype = guint32
# value_key_cell_get_data_size(vk)
value_key_cell_get_data_size.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_data_size.__doc__ = \
"""guint32 value_key_cell_get_data_size(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:90"""
# ../../../rregadmin/hive/value_key_cell.h 96
value_key_cell_get_data = _libraries['librregadmin.so.1'].value_key_cell_get_data
value_key_cell_get_data.restype = POINTER(guint8)
# value_key_cell_get_data(vk)
value_key_cell_get_data.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_data.__doc__ = \
"""unknown * value_key_cell_get_data(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:96"""
# ../../../rregadmin/hive/value_key_cell.h 102
value_key_cell_get_flags = _libraries['librregadmin.so.1'].value_key_cell_get_flags
value_key_cell_get_flags.restype = guint16
# value_key_cell_get_flags(vk)
value_key_cell_get_flags.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_flags.__doc__ = \
"""guint16 value_key_cell_get_flags(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:102"""
# ../../../rregadmin/hive/value_key_cell.h 108
value_key_cell_get_val = _libraries['librregadmin.so.1'].value_key_cell_get_val
value_key_cell_get_val.restype = POINTER(Value)
# value_key_cell_get_val(vk)
value_key_cell_get_val.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_val.__doc__ = \
"""Value * value_key_cell_get_val(ValueKeyCell * vk)
../../../rregadmin/hive/value_key_cell.h:108"""
# ../../../rregadmin/hive/value_key_cell.h 114
value_key_cell_set_val = _libraries['librregadmin.so.1'].value_key_cell_set_val
value_key_cell_set_val.restype = gboolean
# value_key_cell_set_val(in_vkc, in_val)
value_key_cell_set_val.argtypes = [POINTER(ValueKeyCell), POINTER(Value)]
value_key_cell_set_val.__doc__ = \
"""gboolean value_key_cell_set_val(ValueKeyCell * in_vkc, unknown * in_val)
../../../rregadmin/hive/value_key_cell.h:114"""
ValueKeyCellModifier = CFUNCTYPE(POINTER(Value), POINTER(Value), gpointer)
# ../../../rregadmin/hive/value_key_cell.h 138
value_key_cell_modify_val = _libraries['librregadmin.so.1'].value_key_cell_modify_val
value_key_cell_modify_val.restype = gboolean
# value_key_cell_modify_val(in_vkc, in_mod, in_mod_data)
value_key_cell_modify_val.argtypes = [POINTER(ValueKeyCell), ValueKeyCellModifier, gpointer]
value_key_cell_modify_val.__doc__ = \
"""gboolean value_key_cell_modify_val(ValueKeyCell * in_vkc, ValueKeyCellModifier in_mod, gpointer in_mod_data)
../../../rregadmin/hive/value_key_cell.h:138"""
# ../../../rregadmin/hive/value_key_cell.h 144
value_key_cell_get_type = _libraries['librregadmin.so.1'].value_key_cell_get_type
value_key_cell_get_type.restype = ValueType
# value_key_cell_get_type(vk)
value_key_cell_get_type.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_type.__doc__ = \
"""ValueType value_key_cell_get_type(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:144"""
# ../../../rregadmin/hive/value_key_cell.h 153
value_key_cell_get_value_cell = _libraries['librregadmin.so.1'].value_key_cell_get_value_cell
value_key_cell_get_value_cell.restype = POINTER(ValueCell)
# value_key_cell_get_value_cell(vk)
value_key_cell_get_value_cell.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_get_value_cell.__doc__ = \
"""ValueCell * value_key_cell_get_value_cell(unknown * vk)
../../../rregadmin/hive/value_key_cell.h:153"""
# ../../../rregadmin/hive/value_key_cell.h 162
value_key_cell_get_pretty_output = _libraries['librregadmin.so.1'].value_key_cell_get_pretty_output
value_key_cell_get_pretty_output.restype = gboolean
# value_key_cell_get_pretty_output(in_vkc, in_pathname, in_output)
value_key_cell_get_pretty_output.argtypes = [POINTER(ValueKeyCell), STRING, POINTER(ustring)]
value_key_cell_get_pretty_output.__doc__ = \
"""gboolean value_key_cell_get_pretty_output(ValueKeyCell * in_vkc, unknown * in_pathname, ustring * in_output)
../../../rregadmin/hive/value_key_cell.h:162"""
# ../../../rregadmin/hive/value_key_cell.h 170
value_key_cell_get_xml_output = _libraries['librregadmin.so.1'].value_key_cell_get_xml_output
value_key_cell_get_xml_output.restype = gboolean
# value_key_cell_get_xml_output(in_vkc, in_output)
value_key_cell_get_xml_output.argtypes = [POINTER(ValueKeyCell), POINTER(ustring)]
value_key_cell_get_xml_output.__doc__ = \
"""gboolean value_key_cell_get_xml_output(ValueKeyCell * in_vkc, ustring * in_output)
../../../rregadmin/hive/value_key_cell.h:170"""
# ../../../rregadmin/hive/value_key_cell.h 178
value_key_cell_debug_print = _libraries['librregadmin.so.1'].value_key_cell_debug_print
value_key_cell_debug_print.restype = None
# value_key_cell_debug_print(key)
value_key_cell_debug_print.argtypes = [POINTER(ValueKeyCell)]
value_key_cell_debug_print.__doc__ = \
"""void value_key_cell_debug_print(ValueKeyCell * key)
../../../rregadmin/hive/value_key_cell.h:178"""
# ../../../rregadmin/hive/value_key_cell.h 186
value_key_cell_pretty_print = _libraries['librregadmin.so.1'].value_key_cell_pretty_print
value_key_cell_pretty_print.restype = None
# value_key_cell_pretty_print(key, in_pathname)
value_key_cell_pretty_print.argtypes = [POINTER(ValueKeyCell), STRING]
value_key_cell_pretty_print.__doc__ = \
"""void value_key_cell_pretty_print(ValueKeyCell * key, unknown * in_pathname)
../../../rregadmin/hive/value_key_cell.h:186"""
__all__ = ['value_key_cell_unalloc',
           'value_key_cell_get_pretty_output',
           'value_key_cell_get_name', 'value_key_cell_is_valid',
           'value_key_cell_get_data_size', 'value_key_cell_to_cell',
           'value_key_cell_get_type', 'value_key_cell_debug_print',
           'value_key_cell_get_xml_output',
           'value_key_cell_get_value_cell',
           'value_key_cell_from_cell', 'ValueKeyCellModifier',
           'value_key_cell_get_data', 'value_key_cell_get_flags',
           'value_key_cell_alloc', 'value_key_cell_pretty_print',
           'value_key_cell_set_val', 'value_key_cell_get_val',
           'value_key_cell_modify_val']
